// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`binotype.Context > create(simonmika.com, '/', undefined) > context 1`] = `
{
  "article": {
    "articles": [
      {
        "id": "takingRiskWhenDying",
        "link": "/article/taking-risk-when-dying",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2017-08-23T09:15:00+02:00",
        "title": {
          "formatted": "Taking Risk When Dying",
          "plain": "Taking Risk When Dying",
        },
      },
      {
        "id": "optimizingSoftware",
        "link": "/article/optimizing-software",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-11-24T08:15:46+02:00",
        "title": {
          "formatted": "Optimizing Software",
          "plain": "Optimizing Software",
        },
      },
      {
        "id": "naming",
        "link": "/article/naming",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-10-27T16:12:00+02:00",
        "title": {
          "formatted": "Naming",
          "plain": "Naming",
        },
      },
      {
        "id": "programmingInterview",
        "link": "/article/programming-interview",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-10-05T17:32:00+02:00",
        "title": {
          "formatted": "The Programming Interview",
          "plain": "The Programming Interview",
        },
      },
      {
        "id": "recruitingProcess",
        "link": "/article/recruiting-process",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-09-27T23:18:43+02:00",
        "title": {
          "formatted": "Recruiting Process",
          "plain": "Recruiting Process",
        },
      },
      {
        "id": "rockStarProgrammers",
        "link": "/article/rock-star-programmers",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-09-27T23:18:43+02:00",
        "title": {
          "formatted": "Rock Star Programmers",
          "plain": "Rock Star Programmers",
        },
      },
      {
        "id": "toLive",
        "link": "/article/to-live",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-08-18T21:31:21+02:00",
        "title": {
          "formatted": "To Live",
          "plain": "To Live",
        },
      },
    ],
    "id": "article",
    "link": "/article",
    "list": {
      "mode": "header",
    },
    "mode": "full",
    "title": {
      "formatted": "Articles",
      "plain": "Articles",
    },
  },
  "base": "https://simonmika.com",
  "design": {
    "home": "article",
    "icon": "icon/favicon.ico",
    "list": "header",
    "logotype": "assets/logotype.svg",
    "mode": "full",
    "navigation": "header",
    "scripts": [
      "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js",
      "/assets/share-blockquote.js",
    ],
    "styles": [
      "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/default.min.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "Articles",
        "items": [
          {
            "description": "Taking Risk When Dying",
            "label": "Taking Risk When Dying",
            "url": "/article/taking-risk-when-dying",
          },
          {
            "description": "Optimizing Software",
            "label": "Optimizing Software",
            "url": "/article/optimizing-software",
          },
          {
            "description": "Naming",
            "label": "Naming",
            "url": "/article/naming",
          },
          {
            "description": "The Programming Interview",
            "label": "The Programming Interview",
            "url": "/article/programming-interview",
          },
          {
            "description": "Recruiting Process",
            "label": "Recruiting Process",
            "url": "/article/recruiting-process",
          },
          {
            "description": "Rock Star Programmers",
            "label": "Rock Star Programmers",
            "url": "/article/rock-star-programmers",
          },
          {
            "description": "To Live",
            "label": "To Live",
            "url": "/article/to-live",
          },
        ],
        "label": "Articles",
        "url": "/article",
      },
      {
        "description": "Talks",
        "items": [
          {
            "description": "Egenanställd Konsult",
            "label": "Egenanställd Konsult",
            "url": "/talk/egen-konsult",
          },
          {
            "description": "Retro Game w/ Modern UI Tools",
            "label": "Retro Game w/ Modern UI Tools",
            "url": "/talk/retro-game-modern-ui-tools",
          },
          {
            "description": "Recruiting and Become Recruited 2025",
            "label": "Recruiting and Become Recruited 2025",
            "url": "/talk/recruiting2025",
          },
          {
            "description": "Recruiting and Become Recruited",
            "label": "Recruiting and Become Recruited",
            "url": "/talk/recruiting",
          },
          {
            "description": "How I Use TypeScript",
            "label": "How I Use TypeScript",
            "url": "/talk/how-i-use-typescript",
          },
          {
            "description": "On Programming",
            "label": "On Programming",
            "url": "/talk/on-programming",
          },
        ],
        "label": "Talks",
        "url": "/talk",
      },
      {
        "description": "Contact",
        "label": "Contact",
        "url": "/contact",
      },
      {
        "description": "Description",
        "label": "Description",
        "url": "/description",
      },
      {
        "description": "Subscribe",
        "label": "Subscribe",
        "url": "/subscribe",
      },
      {
        "description": "About",
        "label": "About",
        "url": "/about",
      },
    ],
  },
  "title": "Simon Says",
  "url": "https://simonmika.com/",
}
`;

exports[`binotype.Context > create(simonmika.com, '/', undefined) > context.load 1`] = `
{
  "articles": [
    {
      "id": "takingRiskWhenDying",
      "link": "/article/taking-risk-when-dying",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2017-08-23T09:15:00+02:00",
      "title": {
        "formatted": "Taking Risk When Dying",
        "plain": "Taking Risk When Dying",
      },
    },
    {
      "id": "optimizingSoftware",
      "link": "/article/optimizing-software",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-11-24T08:15:46+02:00",
      "title": {
        "formatted": "Optimizing Software",
        "plain": "Optimizing Software",
      },
    },
    {
      "id": "naming",
      "link": "/article/naming",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-10-27T16:12:00+02:00",
      "title": {
        "formatted": "Naming",
        "plain": "Naming",
      },
    },
    {
      "id": "programmingInterview",
      "link": "/article/programming-interview",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-10-05T17:32:00+02:00",
      "title": {
        "formatted": "The Programming Interview",
        "plain": "The Programming Interview",
      },
    },
    {
      "id": "recruitingProcess",
      "link": "/article/recruiting-process",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-09-27T23:18:43+02:00",
      "title": {
        "formatted": "Recruiting Process",
        "plain": "Recruiting Process",
      },
    },
    {
      "id": "rockStarProgrammers",
      "link": "/article/rock-star-programmers",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-09-27T23:18:43+02:00",
      "title": {
        "formatted": "Rock Star Programmers",
        "plain": "Rock Star Programmers",
      },
    },
    {
      "id": "toLive",
      "link": "/article/to-live",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-08-18T21:31:21+02:00",
      "title": {
        "formatted": "To Live",
        "plain": "To Live",
      },
    },
  ],
  "id": "article",
  "link": "/article",
  "list": {
    "mode": "header",
  },
  "mode": "full",
  "title": {
    "formatted": "Articles",
    "plain": "Articles",
  },
}
`;

exports[`binotype.Context > create(simonmika.com, '/about', undefined) > context 1`] = `
{
  "article": {
    "author": "Simon Mika",
    "content": "I am Simon Mika, and I create things. Professionally I create software products. Either hands on or by creating the organization that builds the products.
I live in Uppsala, Sweden with my wife Sannah and my four kids in a house from 1937 that we have been renovating since 2009.
I write about building software and building companies.
Currently, I help companies as a consultant with everything from software architecture to business development. If you are interested in my services please contact me. When I don't work for money I also spend time on SysPL and TypeUp.
You can find out more about me on my page on LinkedIn and on GitHub.
",
    "id": "about",
    "link": "/about",
    "list": {
      "mode": "header",
    },
    "mode": "full",
    "subtitle": [
      "About Simon Mika",
    ],
    "title": {
      "formatted": "About",
      "plain": "About",
    },
  },
  "base": "https://simonmika.com",
  "design": {
    "home": "article",
    "icon": "icon/favicon.ico",
    "list": "header",
    "logotype": "assets/logotype.svg",
    "mode": "full",
    "navigation": "header",
    "scripts": [
      "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js",
      "/assets/share-blockquote.js",
    ],
    "styles": [
      "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/default.min.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "Articles",
        "items": [
          {
            "description": "Taking Risk When Dying",
            "label": "Taking Risk When Dying",
            "url": "/article/taking-risk-when-dying",
          },
          {
            "description": "Optimizing Software",
            "label": "Optimizing Software",
            "url": "/article/optimizing-software",
          },
          {
            "description": "Naming",
            "label": "Naming",
            "url": "/article/naming",
          },
          {
            "description": "The Programming Interview",
            "label": "The Programming Interview",
            "url": "/article/programming-interview",
          },
          {
            "description": "Recruiting Process",
            "label": "Recruiting Process",
            "url": "/article/recruiting-process",
          },
          {
            "description": "Rock Star Programmers",
            "label": "Rock Star Programmers",
            "url": "/article/rock-star-programmers",
          },
          {
            "description": "To Live",
            "label": "To Live",
            "url": "/article/to-live",
          },
        ],
        "label": "Articles",
        "url": "/article",
      },
      {
        "description": "Talks",
        "items": [
          {
            "description": "Egenanställd Konsult",
            "label": "Egenanställd Konsult",
            "url": "/talk/egen-konsult",
          },
          {
            "description": "Retro Game w/ Modern UI Tools",
            "label": "Retro Game w/ Modern UI Tools",
            "url": "/talk/retro-game-modern-ui-tools",
          },
          {
            "description": "Recruiting and Become Recruited 2025",
            "label": "Recruiting and Become Recruited 2025",
            "url": "/talk/recruiting2025",
          },
          {
            "description": "Recruiting and Become Recruited",
            "label": "Recruiting and Become Recruited",
            "url": "/talk/recruiting",
          },
          {
            "description": "How I Use TypeScript",
            "label": "How I Use TypeScript",
            "url": "/talk/how-i-use-typescript",
          },
          {
            "description": "On Programming",
            "label": "On Programming",
            "url": "/talk/on-programming",
          },
        ],
        "label": "Talks",
        "url": "/talk",
      },
      {
        "description": "Contact",
        "label": "Contact",
        "url": "/contact",
      },
      {
        "description": "Description",
        "label": "Description",
        "url": "/description",
      },
      {
        "description": "Subscribe",
        "label": "Subscribe",
        "url": "/subscribe",
      },
      {
        "description": "About",
        "label": "About",
        "selected": "current",
        "url": "/about",
      },
    ],
  },
  "title": "Simon Says",
  "url": "https://simonmika.com/about",
}
`;

exports[`binotype.Context > create(simonmika.com, '/about', undefined) > context.load 1`] = `
{
  "author": "Simon Mika",
  "content": "I am Simon Mika, and I create things. Professionally I create software products. Either hands on or by creating the organization that builds the products.
I live in Uppsala, Sweden with my wife Sannah and my four kids in a house from 1937 that we have been renovating since 2009.
I write about building software and building companies.
Currently, I help companies as a consultant with everything from software architecture to business development. If you are interested in my services please contact me. When I don't work for money I also spend time on SysPL and TypeUp.
You can find out more about me on my page on LinkedIn and on GitHub.
",
  "id": "about",
  "link": "/about",
  "list": {
    "mode": "header",
  },
  "mode": "full",
  "subtitle": [
    "About Simon Mika",
  ],
  "title": {
    "formatted": "About",
    "plain": "About",
  },
}
`;

exports[`binotype.Context > create(simonmika.com, '/article', { list: { limit: 5 } }) > context 1`] = `
{
  "article": {
    "articles": [
      {
        "id": "takingRiskWhenDying",
        "link": "/article/taking-risk-when-dying",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2017-08-23T09:15:00+02:00",
        "title": {
          "formatted": "Taking Risk When Dying",
          "plain": "Taking Risk When Dying",
        },
      },
      {
        "id": "optimizingSoftware",
        "link": "/article/optimizing-software",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-11-24T08:15:46+02:00",
        "title": {
          "formatted": "Optimizing Software",
          "plain": "Optimizing Software",
        },
      },
      {
        "id": "naming",
        "link": "/article/naming",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-10-27T16:12:00+02:00",
        "title": {
          "formatted": "Naming",
          "plain": "Naming",
        },
      },
      {
        "id": "programmingInterview",
        "link": "/article/programming-interview",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-10-05T17:32:00+02:00",
        "title": {
          "formatted": "The Programming Interview",
          "plain": "The Programming Interview",
        },
      },
      {
        "id": "recruitingProcess",
        "link": "/article/recruiting-process",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-09-27T23:18:43+02:00",
        "title": {
          "formatted": "Recruiting Process",
          "plain": "Recruiting Process",
        },
      },
      {
        "id": "rockStarProgrammers",
        "link": "/article/rock-star-programmers",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-09-27T23:18:43+02:00",
        "title": {
          "formatted": "Rock Star Programmers",
          "plain": "Rock Star Programmers",
        },
      },
      {
        "id": "toLive",
        "link": "/article/to-live",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-08-18T21:31:21+02:00",
        "title": {
          "formatted": "To Live",
          "plain": "To Live",
        },
      },
    ],
    "id": "article",
    "link": "/article",
    "list": {
      "mode": "header",
    },
    "mode": "full",
    "title": {
      "formatted": "Articles",
      "plain": "Articles",
    },
  },
  "base": "https://simonmika.com",
  "design": {
    "home": "article",
    "icon": "icon/favicon.ico",
    "list": "header",
    "logotype": "assets/logotype.svg",
    "mode": "full",
    "navigation": "header",
    "scripts": [
      "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js",
      "/assets/share-blockquote.js",
    ],
    "styles": [
      "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/default.min.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "Articles",
        "items": [
          {
            "description": "Taking Risk When Dying",
            "label": "Taking Risk When Dying",
            "url": "/article/taking-risk-when-dying",
          },
          {
            "description": "Optimizing Software",
            "label": "Optimizing Software",
            "url": "/article/optimizing-software",
          },
          {
            "description": "Naming",
            "label": "Naming",
            "url": "/article/naming",
          },
          {
            "description": "The Programming Interview",
            "label": "The Programming Interview",
            "url": "/article/programming-interview",
          },
          {
            "description": "Recruiting Process",
            "label": "Recruiting Process",
            "url": "/article/recruiting-process",
          },
          {
            "description": "Rock Star Programmers",
            "label": "Rock Star Programmers",
            "url": "/article/rock-star-programmers",
          },
          {
            "description": "To Live",
            "label": "To Live",
            "url": "/article/to-live",
          },
        ],
        "label": "Articles",
        "selected": "current",
        "url": "/article",
      },
      {
        "description": "Talks",
        "items": [
          {
            "description": "Egenanställd Konsult",
            "label": "Egenanställd Konsult",
            "url": "/talk/egen-konsult",
          },
          {
            "description": "Retro Game w/ Modern UI Tools",
            "label": "Retro Game w/ Modern UI Tools",
            "url": "/talk/retro-game-modern-ui-tools",
          },
          {
            "description": "Recruiting and Become Recruited 2025",
            "label": "Recruiting and Become Recruited 2025",
            "url": "/talk/recruiting2025",
          },
          {
            "description": "Recruiting and Become Recruited",
            "label": "Recruiting and Become Recruited",
            "url": "/talk/recruiting",
          },
          {
            "description": "How I Use TypeScript",
            "label": "How I Use TypeScript",
            "url": "/talk/how-i-use-typescript",
          },
          {
            "description": "On Programming",
            "label": "On Programming",
            "url": "/talk/on-programming",
          },
        ],
        "label": "Talks",
        "url": "/talk",
      },
      {
        "description": "Contact",
        "label": "Contact",
        "url": "/contact",
      },
      {
        "description": "Description",
        "label": "Description",
        "url": "/description",
      },
      {
        "description": "Subscribe",
        "label": "Subscribe",
        "url": "/subscribe",
      },
      {
        "description": "About",
        "label": "About",
        "url": "/about",
      },
    ],
  },
  "title": "Simon Says",
  "url": "https://simonmika.com/article",
}
`;

exports[`binotype.Context > create(simonmika.com, '/article', { list: { limit: 5 } }) > context.load 1`] = `
{
  "articles": [
    {
      "id": "takingRiskWhenDying",
      "link": "/article/taking-risk-when-dying",
      "list": {
        "limit": 5,
        "mode": "header",
      },
      "mode": "header",
      "published": "2017-08-23T09:15:00+02:00",
      "title": {
        "formatted": "Taking Risk When Dying",
        "plain": "Taking Risk When Dying",
      },
    },
    {
      "id": "optimizingSoftware",
      "link": "/article/optimizing-software",
      "list": {
        "limit": 5,
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-11-24T08:15:46+02:00",
      "title": {
        "formatted": "Optimizing Software",
        "plain": "Optimizing Software",
      },
    },
    {
      "id": "naming",
      "link": "/article/naming",
      "list": {
        "limit": 5,
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-10-27T16:12:00+02:00",
      "title": {
        "formatted": "Naming",
        "plain": "Naming",
      },
    },
    {
      "id": "programmingInterview",
      "link": "/article/programming-interview",
      "list": {
        "limit": 5,
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-10-05T17:32:00+02:00",
      "title": {
        "formatted": "The Programming Interview",
        "plain": "The Programming Interview",
      },
    },
    {
      "id": "recruitingProcess",
      "link": "/article/recruiting-process",
      "list": {
        "limit": 5,
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-09-27T23:18:43+02:00",
      "title": {
        "formatted": "Recruiting Process",
        "plain": "Recruiting Process",
      },
    },
  ],
  "id": "article",
  "link": "/article",
  "list": {
    "limit": 5,
    "mode": "header",
  },
  "mode": "full",
  "title": {
    "formatted": "Articles",
    "plain": "Articles",
  },
}
`;

exports[`binotype.Context > create(simonmika.com, '/article', undefined) > context 1`] = `
{
  "article": {
    "articles": [
      {
        "id": "takingRiskWhenDying",
        "link": "/article/taking-risk-when-dying",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2017-08-23T09:15:00+02:00",
        "title": {
          "formatted": "Taking Risk When Dying",
          "plain": "Taking Risk When Dying",
        },
      },
      {
        "id": "optimizingSoftware",
        "link": "/article/optimizing-software",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-11-24T08:15:46+02:00",
        "title": {
          "formatted": "Optimizing Software",
          "plain": "Optimizing Software",
        },
      },
      {
        "id": "naming",
        "link": "/article/naming",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-10-27T16:12:00+02:00",
        "title": {
          "formatted": "Naming",
          "plain": "Naming",
        },
      },
      {
        "id": "programmingInterview",
        "link": "/article/programming-interview",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-10-05T17:32:00+02:00",
        "title": {
          "formatted": "The Programming Interview",
          "plain": "The Programming Interview",
        },
      },
      {
        "id": "recruitingProcess",
        "link": "/article/recruiting-process",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-09-27T23:18:43+02:00",
        "title": {
          "formatted": "Recruiting Process",
          "plain": "Recruiting Process",
        },
      },
      {
        "id": "rockStarProgrammers",
        "link": "/article/rock-star-programmers",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-09-27T23:18:43+02:00",
        "title": {
          "formatted": "Rock Star Programmers",
          "plain": "Rock Star Programmers",
        },
      },
      {
        "id": "toLive",
        "link": "/article/to-live",
        "list": {
          "mode": "header",
        },
        "mode": "header",
        "published": "2016-08-18T21:31:21+02:00",
        "title": {
          "formatted": "To Live",
          "plain": "To Live",
        },
      },
    ],
    "id": "article",
    "link": "/article",
    "list": {
      "mode": "header",
    },
    "mode": "full",
    "title": {
      "formatted": "Articles",
      "plain": "Articles",
    },
  },
  "base": "https://simonmika.com",
  "design": {
    "home": "article",
    "icon": "icon/favicon.ico",
    "list": "header",
    "logotype": "assets/logotype.svg",
    "mode": "full",
    "navigation": "header",
    "scripts": [
      "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js",
      "/assets/share-blockquote.js",
    ],
    "styles": [
      "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/default.min.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "Articles",
        "items": [
          {
            "description": "Taking Risk When Dying",
            "label": "Taking Risk When Dying",
            "url": "/article/taking-risk-when-dying",
          },
          {
            "description": "Optimizing Software",
            "label": "Optimizing Software",
            "url": "/article/optimizing-software",
          },
          {
            "description": "Naming",
            "label": "Naming",
            "url": "/article/naming",
          },
          {
            "description": "The Programming Interview",
            "label": "The Programming Interview",
            "url": "/article/programming-interview",
          },
          {
            "description": "Recruiting Process",
            "label": "Recruiting Process",
            "url": "/article/recruiting-process",
          },
          {
            "description": "Rock Star Programmers",
            "label": "Rock Star Programmers",
            "url": "/article/rock-star-programmers",
          },
          {
            "description": "To Live",
            "label": "To Live",
            "url": "/article/to-live",
          },
        ],
        "label": "Articles",
        "selected": "current",
        "url": "/article",
      },
      {
        "description": "Talks",
        "items": [
          {
            "description": "Egenanställd Konsult",
            "label": "Egenanställd Konsult",
            "url": "/talk/egen-konsult",
          },
          {
            "description": "Retro Game w/ Modern UI Tools",
            "label": "Retro Game w/ Modern UI Tools",
            "url": "/talk/retro-game-modern-ui-tools",
          },
          {
            "description": "Recruiting and Become Recruited 2025",
            "label": "Recruiting and Become Recruited 2025",
            "url": "/talk/recruiting2025",
          },
          {
            "description": "Recruiting and Become Recruited",
            "label": "Recruiting and Become Recruited",
            "url": "/talk/recruiting",
          },
          {
            "description": "How I Use TypeScript",
            "label": "How I Use TypeScript",
            "url": "/talk/how-i-use-typescript",
          },
          {
            "description": "On Programming",
            "label": "On Programming",
            "url": "/talk/on-programming",
          },
        ],
        "label": "Talks",
        "url": "/talk",
      },
      {
        "description": "Contact",
        "label": "Contact",
        "url": "/contact",
      },
      {
        "description": "Description",
        "label": "Description",
        "url": "/description",
      },
      {
        "description": "Subscribe",
        "label": "Subscribe",
        "url": "/subscribe",
      },
      {
        "description": "About",
        "label": "About",
        "url": "/about",
      },
    ],
  },
  "title": "Simon Says",
  "url": "https://simonmika.com/article",
}
`;

exports[`binotype.Context > create(simonmika.com, '/article', undefined) > context.load 1`] = `
{
  "articles": [
    {
      "id": "takingRiskWhenDying",
      "link": "/article/taking-risk-when-dying",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2017-08-23T09:15:00+02:00",
      "title": {
        "formatted": "Taking Risk When Dying",
        "plain": "Taking Risk When Dying",
      },
    },
    {
      "id": "optimizingSoftware",
      "link": "/article/optimizing-software",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-11-24T08:15:46+02:00",
      "title": {
        "formatted": "Optimizing Software",
        "plain": "Optimizing Software",
      },
    },
    {
      "id": "naming",
      "link": "/article/naming",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-10-27T16:12:00+02:00",
      "title": {
        "formatted": "Naming",
        "plain": "Naming",
      },
    },
    {
      "id": "programmingInterview",
      "link": "/article/programming-interview",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-10-05T17:32:00+02:00",
      "title": {
        "formatted": "The Programming Interview",
        "plain": "The Programming Interview",
      },
    },
    {
      "id": "recruitingProcess",
      "link": "/article/recruiting-process",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-09-27T23:18:43+02:00",
      "title": {
        "formatted": "Recruiting Process",
        "plain": "Recruiting Process",
      },
    },
    {
      "id": "rockStarProgrammers",
      "link": "/article/rock-star-programmers",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-09-27T23:18:43+02:00",
      "title": {
        "formatted": "Rock Star Programmers",
        "plain": "Rock Star Programmers",
      },
    },
    {
      "id": "toLive",
      "link": "/article/to-live",
      "list": {
        "mode": "header",
      },
      "mode": "header",
      "published": "2016-08-18T21:31:21+02:00",
      "title": {
        "formatted": "To Live",
        "plain": "To Live",
      },
    },
  ],
  "id": "article",
  "link": "/article",
  "list": {
    "mode": "header",
  },
  "mode": "full",
  "title": {
    "formatted": "Articles",
    "plain": "Articles",
  },
}
`;

exports[`binotype.Context > create(simonmika.com, '/article/to-live', undefined) > context 1`] = `
{
  "article": {
    "id": "toLive",
    "link": "/article/to-live",
    "list": {
      "mode": "full",
    },
    "mode": "full",
    "title": {
      "formatted": "Not Found",
      "plain": "Not Found",
    },
  },
  "base": "https://simonmika.com",
  "design": {
    "home": "article",
    "icon": "icon/favicon.ico",
    "list": "header",
    "logotype": "assets/logotype.svg",
    "mode": "full",
    "navigation": "header",
    "scripts": [
      "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js",
      "/assets/share-blockquote.js",
    ],
    "styles": [
      "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/default.min.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "Articles",
        "items": [
          {
            "description": "Taking Risk When Dying",
            "label": "Taking Risk When Dying",
            "url": "/article/taking-risk-when-dying",
          },
          {
            "description": "Optimizing Software",
            "label": "Optimizing Software",
            "url": "/article/optimizing-software",
          },
          {
            "description": "Naming",
            "label": "Naming",
            "url": "/article/naming",
          },
          {
            "description": "The Programming Interview",
            "label": "The Programming Interview",
            "url": "/article/programming-interview",
          },
          {
            "description": "Recruiting Process",
            "label": "Recruiting Process",
            "url": "/article/recruiting-process",
          },
          {
            "description": "Rock Star Programmers",
            "label": "Rock Star Programmers",
            "url": "/article/rock-star-programmers",
          },
          {
            "description": "To Live",
            "label": "To Live",
            "selected": "current",
            "url": "/article/to-live",
          },
        ],
        "label": "Articles",
        "selected": "parent",
        "url": "/article",
      },
      {
        "description": "Talks",
        "items": [
          {
            "description": "Egenanställd Konsult",
            "label": "Egenanställd Konsult",
            "url": "/talk/egen-konsult",
          },
          {
            "description": "Retro Game w/ Modern UI Tools",
            "label": "Retro Game w/ Modern UI Tools",
            "url": "/talk/retro-game-modern-ui-tools",
          },
          {
            "description": "Recruiting and Become Recruited 2025",
            "label": "Recruiting and Become Recruited 2025",
            "url": "/talk/recruiting2025",
          },
          {
            "description": "Recruiting and Become Recruited",
            "label": "Recruiting and Become Recruited",
            "url": "/talk/recruiting",
          },
          {
            "description": "How I Use TypeScript",
            "label": "How I Use TypeScript",
            "url": "/talk/how-i-use-typescript",
          },
          {
            "description": "On Programming",
            "label": "On Programming",
            "url": "/talk/on-programming",
          },
        ],
        "label": "Talks",
        "url": "/talk",
      },
      {
        "description": "Contact",
        "label": "Contact",
        "url": "/contact",
      },
      {
        "description": "Description",
        "label": "Description",
        "url": "/description",
      },
      {
        "description": "Subscribe",
        "label": "Subscribe",
        "url": "/subscribe",
      },
      {
        "description": "About",
        "label": "About",
        "url": "/about",
      },
    ],
  },
  "title": "Simon Says",
  "url": "https://simonmika.com/article/to-live",
}
`;

exports[`binotype.Context > create(simonmika.com, '/article/to-live', undefined) > context.load 1`] = `undefined`;

exports[`binotype.Context > create(site, /) 1`] = `
{
  "article": {
    "articles": [
      {
        "content": "About page content",
        "id": "about",
        "link": "/about",
        "list": {
          "mode": "summary",
        },
        "mode": "summary",
        "title": {
          "formatted": "About",
          "plain": "About",
        },
      },
    ],
    "id": "",
    "link": "/",
    "list": {
      "mode": "summary",
    },
    "mode": "full",
    "title": {
      "formatted": "[]",
      "plain": "[]",
    },
  },
  "base": "https://example.com",
  "design": {
    "icon": "/favicon.ico",
    "list": "summary",
    "logotype": "/logo.svg",
    "navigation": "header",
    "scripts": [
      "/script.js",
    ],
    "styles": [
      "/style.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "About",
        "label": "About",
        "url": "/about",
      },
    ],
  },
  "title": "Test Site",
  "url": "https://example.com/",
}
`;

exports[`binotype.Context > create(site, /about) 1`] = `
{
  "article": {
    "content": "About page content",
    "id": "about",
    "link": "/about",
    "list": {
      "mode": "summary",
    },
    "mode": "full",
    "title": {
      "formatted": "About",
      "plain": "About",
    },
  },
  "base": "https://example.com",
  "design": {
    "icon": "/favicon.ico",
    "list": "summary",
    "logotype": "/logo.svg",
    "navigation": "header",
    "scripts": [
      "/script.js",
    ],
    "styles": [
      "/style.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "About",
        "label": "About",
        "selected": "current",
        "url": "/about",
      },
    ],
  },
  "title": "Test Site",
  "url": "https://example.com/about",
}
`;

exports[`binotype.Context > create(site, /nonexistent) 1`] = `
{
  "article": {
    "id": "nonexistent",
    "link": "/nonexistent",
    "list": {
      "mode": "full",
    },
    "mode": "full",
    "title": {
      "formatted": "Not Found",
      "plain": "Not Found",
    },
  },
  "base": "https://example.com",
  "design": {
    "icon": "/favicon.ico",
    "list": "summary",
    "logotype": "/logo.svg",
    "navigation": "header",
    "scripts": [
      "/script.js",
    ],
    "styles": [
      "/style.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "About",
        "label": "About",
        "url": "/about",
      },
    ],
  },
  "title": "Test Site",
  "url": "https://example.com/nonexistent",
}
`;

exports[`binotype.Context > create(site, invalid-path) 1`] = `
{
  "article": {
    "id": "invalidPath",
    "link": "/invalid-path",
    "list": {
      "mode": "full",
    },
    "mode": "full",
    "title": {
      "formatted": "Not Found",
      "plain": "Not Found",
    },
  },
  "base": "https://example.com",
  "design": {
    "icon": "/favicon.ico",
    "list": "summary",
    "logotype": "/logo.svg",
    "navigation": "header",
    "scripts": [
      "/script.js",
    ],
    "styles": [
      "/style.css",
    ],
  },
  "menu": {
    "items": [
      {
        "description": "About",
        "label": "About",
        "url": "/about",
      },
    ],
  },
  "title": "Test Site",
  "url": "https://example.com/invalid-path",
}
`;
